<resources>
    <string name="app_name">MySubmissionMadeFour</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TVShow</string>
    <string name="title_favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="this_fragment">Menu Fragment</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">TV Show</string>
    <string name="content_tab_movie">Movie</string>
    <string name="content_tab_tvshow">TV Show</string>
    <string name="name">Nama</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_year">Movie Year</string>
    <string name="detail">Detail</string>
    <string name="tvshow_name">TV Show Name</string>
    <string name="tvshow_year">TV Show Year</string>
    <string name="release">Release</string>
    <string name="director">Director</string>
    <string name="overview">Overview</string>
    <string name="lorem">Lorem ipsum</string>
    <string name="cast">Cast</string>
    <string name="description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
</resources>
