<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/movie_item"
    tools:context=".MovieFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo_movie"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerVertical="false"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/tv_item_name_movie"
                android:layout_toRightOf="@id/img_item_photo_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/movie_name"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/tv_item_release_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_item_photo_movie"
                android:layout_below="@id/tv_item_name_movie"
                android:textSize="15sp"
                android:text="@string/movie_year"
                android:textColor="@android:color/background_dark"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/tv_item_description_movie"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_release_movie"
                android:layout_toRightOf="@+id/img_item_photo_movie"
                android:text="@string/description"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_description_movie"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/img_item_photo_movie"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_set_favorite_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/detail"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_weight="1"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>